[package]
name = "gpu-monitor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared types for gpu-monitor backend and frontends."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
