[package]
name = "gpu-monitor-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Linux system tray frontend for gpu-monitor."

[[bin]]
name = "gpu-monitor-tray"
path = "src/main.rs"

[dependencies]
gpu-monitor-core = { path = "../gpu-monitor-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
ksni = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
tiny-skia = "0.11"
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
once_cell = "1"
